# iproxy

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
alembic/: env.py
alembic/versions/: 122e917c0005_create_users_table.py  31e202e9a51c_create_uploads_table.py  50c10795456e_create_uploads_table.py  a009eedda8d3_add_llm_calls_count_users_table.py  b7c31c5fd105_create_users_table.py  bbe57a25103d_create_users_table.py  bda28ec2e146_create_uploads_table.py  c2ef1623f106_create_sessions_table.py  d7779ba46839_create_conversation_table.py
app/: main.py
app/api/: auth.py
app/api/v1/: auth.py  general.py  profile.py  upload.py  vector.py
app/constants/: log_messages.py
app/core/: __init__.py  database.py  logger.py  settings.py  startup.py
app/enums/: __init__.py  user_status.py
app/exceptions/: auth.py  common.py
app/models/: __init__.py  conversation.py  session.py  upload.py  user.py
app/schemas/: general.py
app/schemas/requests/: auth.py  general.py
app/schemas/responses/: auth.py  common.py  user.py
app/services/: __init__.py  chroma.py  conversation.py  jwt.py  llm.py  password.py  setup.py  upload.py  user.py
app/utils/: general.py
scratchpad/: copilot  issues  issues.csv  kiro
uploads/: 0fe7f403-e386-4854-a1c7-c07c740ab016.txt
