[project]
name = "tapi"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Bijay Das", email = "me@bijaydas.com" }
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "argon2-cffi>=25.1.0",
    "fastapi[standard]>=0.135.0",
    "psycopg2-binary>=2.9.11",
    "pyjwt[crypto]>=2.12.1",
]

[dependency-groups]
dev = [
    "faker>=40.5.1",
    "ruff>=0.15.4",
]
[tool.ruff]
line-length = 120
exclude = [
    "alembic",
]

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
fixable = ["ALL"]
