[project]
name = "interview-helper"
version = "0.1.0"
description = "A FastAPI backend that helps candidates prepare for job interviews using AI"
authors = [
    { name = "bijaydas", email = "me@bijaydas.com" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "argon2-cffi>=25.1.0",
    "chromadb>=1.5.7",
    "fastapi[standard]>=0.135.0",
    "langchain-chroma>=0.1.2",
    "langchain-openai>=1.1.12",
    "langchain-text-splitters>=1.1.1",
    "psycopg2-binary>=2.9.11",
    "pyjwt[crypto]>=2.12.1",
    "pytest>=9.0.3",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.22",
]

[dependency-groups]
dev = [
    "faker>=40.5.1",
    "ruff>=0.15.4",
]
[tool.ruff]
line-length = 120
exclude = [
    "alembic",
]

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
fixable = ["ALL"]
